--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         <meta http-equiv="refresh" content="2; URL='https://www.ebay.co.uk/usr/fifthsplit-electronics'" />
     </head>
     <body>
-        <h1>You're being redirected.</h1>
-        <h2>If you aren't redirected to our eBay page within 2 seconds, <a href="https://www.ebay.co.uk/usr/fifthsplit-electronics">click here.</a></h2>
+        <h1>Welcome to FifthSplit Electronics</h1>
+        <h2>We repair classic iPods, as well as Macs and PCs.</h2>
+        <h2>To browse our product selection,<a href="https://ebay.co.uk/usr/fifthsplit-electronics">click here!</a></h2>
         <br>
         <p>FifthSplit Electronics, 2023</p>
     </body>
