--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Redirecting - FifthSplit Electronics</title>
+        <title>FifthSplit Electronics</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link rel="stylesheet" href="base.css">
-        <meta http-equiv="refresh" content="2; URL='https://www.ebay.co.uk/usr/fifthsplit-electronics'" />
     </head>
     <body>
         <h1>Welcome to FifthSplit Electronics</h1>
