--- a/6fy2n/summary.html
+++ b/6fy2n/summary.html
@@ -6,7 +6,7 @@
         <title>Your Summary - FifthSplit Electronics</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <link rel="stylesheet" href="base.css">
+        <link rel="stylesheet" href="/base.css">
     </head>
     <body>
         <h1>Your Summary</h1>
