--- a/6fy2n/summary.html
+++ b/6fy2n/summary.html
@@ -11,7 +11,7 @@
     <body>
         <h1>Your Summary</h1>
         <h2>Your Device:</h2>
-        <p>iPod Video (5th Generation), Black, 30GB</p><br>
+        <p>iPod Video (5th Generation), Black, 30GB</p>
         <h2>Parts Required</h2>
         <p>Battery: £12.99 <br>
             Display: £16.73 <br>
