--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link rel="stylesheet" href="base.css">
     </head>
-    <body>
-        <h1>Welcome to FifthSplit Electronics</h1>
-        <h2>To browse our product selection, <a href="https://ebay.co.uk/usr/fifthsplit-electronics">click here!</a></h2>
-        <br>
-        <p>FifthSplit Electronics, 2023</p>
-    </body>
-</html>
+    <nav>
+        <label class="logo">FifthSplit Media Group</label>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Liveries</a></li>
+            <li><a href="#">Downloads</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
