--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="base.css">
     </head>
     <nav>
-        <label class="logo"><img src="/images/FifthSplitMediaGroup.png" alt="">FifthSplit Media Group</label>
+        <label class="logo"><img src="/images/FifthSplitMediaGroup.png" alt="FifthSplit Media Group"></label>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Liveries</a></li>
