--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>FifthSplit Electronics</title>
+        <title>Home - FifthSplit Media Group</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link rel="stylesheet" href="base.css">
     </head>
     <nav>
-        <label class="logo"><img src="/images/FifthSplitMediaGroup.png" alt="FifthSplit Media Group"></label>
+        <img class="logo" src="images/FifthSplitMediaGroup.png" alt="FifthSplit Media Group">
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Liveries</a></li>
